# rules_pug

./: .bazelrc  .editorconfig  .gitignore  LICENSE  Makefile  README.md  WORKSPACE  defs.bzl  package.bzl
examples/: BUILD.bazel
examples/hello_world/: BUILD.bazel  main.pug
examples/mixin/: BUILD.bazel  _mixin_file.pug  main.pug
examples/mixin/subdir/: _mixin_resource.pug
pug/: BUILD.bazel  package.json  pug.bzl  pug.js  pug_repositories.bzl
pug/test/: BUILD.bazel  pug_rule_test.bzl
tools/: buildifier.sh  skylint.sh
